# sOS

./: Cargo.toml  README.md  build.rs  e -i HEAD~2  mkrootfs-aarch64.sh
.cargo/: config.toml
etc/: syscalls_linux_aarch64.md
libkernel/: Cargo.toml
libkernel/src/: error.rs
libkernel/src/arch/: mod.rs
libkernel/src/arch/arm64/memory/: tlb.rs
libkernel/src/arch/riscv64/: cpu_ops.rs  exceptions.rs  mod.rs
libkernel/src/arch/riscv64/memory/: mmu.rs  mod.rs  pa_tables.rs  pg_descriptors.rs  pg_tables.rs  pg_walk.rs  tlb.rs
libkernel/src/memory/proc_vm/: mod.rs  vmarea.rs
scripts/: qemu-runner-aarch64.sh  qemu-runner-riscv64.sh
src/: main.rs
src/arch/: mod.rs
src/arch/arm64/boot/: mod.rs
src/arch/arm64/exceptions/: syscall.rs
src/arch/riscv64/: cpu_ops.rs  fdt.rs  mod.rs  proc.rs  sbi.rs  smp.rs
src/arch/riscv64/boot/: exception_level.rs  link.ld  logical_map.rs  memory.rs  mod.rs  paging_bootstrap.rs  secondary.rs  start.S  start.s
src/arch/riscv64/exceptions/: entry.S  mod.rs
src/arch/riscv64/memory/: address_space.rs  fault.rs  fixmap.rs  mmu.rs  mod.rs  tlb.rs  uaccess.rs  uaccess.s
src/arch/riscv64/memory/mmu/: page_allocator.rs  page_mapper.rs  smalloc_page_allocator.rs
src/arch/riscv64/proc/: idle.rs  idle.s  signal.rs
src/console/: tty.rs
src/console/tty/: cooker.rs
src/drivers/: fdt_prober.rs  init.rs
src/drivers/interrupts/: mod.rs
src/drivers/timer/: mod.rs  sbi_timer.rs
src/drivers/uart/: mod.rs  ns16550.rs
src/fs/: dir.rs  fops.rs  reg.rs
src/fs/syscalls/: chdir.rs  mod.rs
src/fs/syscalls/at/: mod.rs  readlink.rs
src/interrupts/: cpu_messenger.rs
src/kernel/: kpipe.rs
src/process/: clone.rs  exit.rs  thread_group.rs
src/process/thread_group/: builder.rs  umask.rs  wait.rs
