[package]
name = "libkernel"
version = "0.0.0"
edition = "2024"

[features]
default = ["arch-aarch64"]
arch-aarch64 = []
arch-riscv64 = ["dep:riscv", "dep:sbi-rt"]

[dependencies]
paste = "1.0.15"
thiserror = { version = "2.0.12", default-features = false }
tock-registers = "0.10.1"
log = "0.4.27"
async-trait = "0.1.88"
object = { version = "0.37.1", default-features = false, features = ["core", "elf", "read_core"] }
bitflags = "2.9.1"
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
intrusive-collections = { version = "0.9.7", default-features = false }

[dependencies.riscv]
version = "0.10"
optional = true

[dependencies.sbi-rt]
version = "0.0.3"
optional = true

[dev-dependencies]
rand = "0.9.1"
tokio = { version = "1.47.1", features = ["full"] }